add cats module

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-graphql-poc",
   "version": "0.0.1",
-  "description": "",
+  "description": "https://www.youtube.com/watch?v=0WgO3-HVH94&t=12s",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
